# gta-assistant

./: .gitignore  .prettierrc  .yarnrc.yml  Cargo.toml  README.md  build.rs  casino1080.excalidraw  index.html  package.json  vite.config.ts
.github/workflows/: auto-deploy.yml  publish.yml
electron-src/: casino.ts  cayo.ts  constants.ts  main.ts  utils.ts
src/: App.tsx  constants.rs  lib.rs  main.rs  main.tsx  style.css  type.ts  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: casino.rs  casino_capture.rs  constants.rs  main.rs  utils.rs
src-tauri/src/casino/: casino.rs  casino_capture.rs  mod.rs
src-tauri/src/cayo/: cayo.rs  cayo_capture.rs  mod.rs
src/casino/: casino.rs  casino_capture.rs  mod.rs
src/cayo/: cayo.rs  cayo_capture.rs
src/components/: TimerButton.tsx  ToggleButton.tsx
src/misc/: mod.rs  no_afk.rs
