[package]
name = "gta-assistant"
version = "2.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
directories = "6.0.0"
fltk = "1.5.9"
image = { version = "0.25.6", features = ["png"] }
image_hasher = "3.0.0"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
rust-embed = { version = "8.7.2", features = [
    "deterministic-timestamps",
    "debug-embed",
] }
windows = { version = "0.61.3", features = ["Win32_UI_Input_KeyboardAndMouse"] }
xcap = "0.6.0"

[build-dependencies]
winresource = "0.1.22"
